# zensus2pgsql

./: .gitignore  CLAUDE.md  Dockerfile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: deploy.yml  docs.yml  pr.yml  publish.yml  test.yml
docs/: index.md
docs/stylesheets/: extra.css
src/zensus2pgsql/: __init__.py  cache.py  cli.py  errors.py  logging.py  retry.py
src/zensus2pgsql/commands/: _base.py  cache.py  create.py  drop.py  list.py
tests/: conftest.py  test_cli.py  test_import.py  test_retry.py
tests/commands/: __init__.py  test_cache.py  test_create.py  test_drop.py  test_list.py  test_retry.py
