[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "zensus2pgsql"
version = "0.2.0"
description = "A Python CLI program that collects Zensus GIS data from Germany and imports it into PostgreSQL"
readme = "README.md"
authors = [
  { name = "Travis Hathaway", email = "travis.j.hathaway@gmail.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
  "aiocsv>=1.4.0",
  "aiofiles>=25.1.0",
  "asyncpg>=0.30.0",
  "httpx[http2]>=0.28.1",
  "platformdirs>=4.5.0",
  "poethepoet (>=0.32.1)",
  "psycopg[binary] (>=3.2.0)",
  "rich>=14.2.0",
  "typer (>=0.15.1)",
  "types-aiofiles>=25.1.0.20251011",
]

[project.scripts]  # https://docs.astral.sh/uv/concepts/projects/config/#command-line-interfaces
zensus2pgsql = "zensus2pgsql.cli:app"
zpg = "zensus2pgsql.cli:app"

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/travishathaway/zensus2pgsql"
source = "https://github.com/travishathaway/zensus2pgsql"
changelog = "https://github.com/travishathaway/zensus2pgsql/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/travishathaway/zensus2pgsql/releases"
documentation = "https://travishathaway.github.io/zensus2pgsql"
issues = "https://github.com/travishathaway/zensus2pgsql/issues"

[dependency-groups]  # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
dev = [
  "commitizen (>=4.3.0)",
  "coverage[toml] (>=7.6.10)",
  "ipykernel (>=6.29.4)",
  "ipython>=8.18.0",
  "ipywidgets (>=8.1.2)",
  "mypy (>=1.14.1)",
  "mkdocs-material (>=9.5.21)",
  "pre-commit (>=4.0.1)",
  "pytest (>=8.3.4)",
  "pytest-mock (>=3.14.0)",
  "pytest-xdist (>=3.6.1)",
  "ruff (>=0.9.2)",
  "pytest-asyncio>=1.3.0",
  "pytest-sugar>=1.1.1",
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml"
testpaths = ["src", "tests"]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "FIX", "T20", "ARG001", "COM812", "D203", "D213", "E501", "PD008", "PD009", "PGH003", "RET504", "S101", "TD003"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.executor]  # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks.docs]
  help = "Build or serve the documentation"
  shell = """
    if [ $serve ]
    then {
      mkdocs serve
    } else {
      mkdocs build
    } fi
    """

    [[tool.poe.tasks.docs.args]]
    help = "Serve the documentation locally with live reload"
    type = "boolean"
    name = "serve"
    options = ["--serve"]

  [tool.poe.tasks.serve]
  help = "Serve the app"

    [[tool.poe.tasks.serve.sequence]]
    cmd = "echo 'Serving app (placeholder)...'"

  [tool.poe.tasks.lint]
  help = "Lint this app"
  cmd = """
    pre-commit run
      --all-files
      --color always
    """

  [tool.poe.tasks.test]
  help = "Test this app"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
